Make clients section mobile responsive on landing, betteryet pages. Fix some styling according to the latest design.

--- a/src/imports/components/ContactUsForm/index.styl
+++ b/src/imports/components/ContactUsForm/index.styl
@@ -7,14 +7,14 @@
     width 100%
     max-width 100%
     margin 0
-    padding 0 40px 40px
+    padding 0 40px
     background $white
 
   .section-heading
     margin-top 120px
 
     +iphone()
-      margin-top 0
+      margin 0
       padding-top 64px
 
     div:last-child
