--- a/src/imports/components/Footer/index.styl
+++ b/src/imports/components/Footer/index.styl
@@ -7,7 +7,8 @@
 
   +iphone()
     flex-wrap wrap
-    padding 40px 30px
+    padding 40px 55px
+    font-size 14px
     text-align center
 
     .footer-details
@@ -16,3 +17,6 @@
     .rights
       width 100%
       margin-top 12px
+
+      +iphone()
+        margin-top 32px
