--- a/src/imports/components/Sections/ClientFooter/index.styl
+++ b/src/imports/components/Sections/ClientFooter/index.styl
@@ -3,8 +3,14 @@
   width 780px
   padding-bottom 16px
 
+  +iphone()
+    width 100%
+    flex-direction column
+    align-items center
+
   .client-photo
     img
+      vertical-align middle
       width 160px
       height 160px
       border-radius 50%
@@ -13,9 +19,16 @@
     margin-left 40px
     font-family "Roboto Mono", sans-serif
 
+    +iphone()
+      width 294px
+      margin 24px 0 0
+
     .name, .position
       font-size $small
       text-transform uppercase
+
+      +iphone()
+        text-align center
 
     .name
       font-weight $medium-weight
@@ -31,8 +44,17 @@
       font-size 32px
       line-height 42px
 
+      +iphone()
+        margin 24px 0
+        text-align center
+        font-size 24px
+        line-height 32px
+
   .buttons
     display flex
+
+    +iphone()
+      justify-content center
 
     .full-review-btn, .project-details-btn
       height 32px
@@ -45,12 +67,34 @@
         box-shadow none
         background $black
 
+        +iphone()
+          width 32px
+          height 32px
+
       .button-icon
         border-radius 50%
-        background $black
+
+        +iphone()
+          width 32px
+          height 32px
+
+    .full-review-btn
+      +iphone()
+        display none
 
     .project-details-btn
       margin-left 40px
+
+      +iphone()
+        margin 0
+
+      .button-title
+        +iphone()
+          color $blue
+
+      .button-icon
+        +iphone()
+          background-color $blue
 
 .client-enter
   opacity 0.01
