--- a/src/imports/components/Sections/WhitePaper/index.styl
+++ b/src/imports/components/Sections/WhitePaper/index.styl
@@ -1,5 +1,3 @@
-@import '~styles/config.styl'
-
 .white-paper
   display flex
   justify-content center
@@ -7,3 +5,8 @@
 
   .paper-width
     max-width 635px
+
+    .contact-us-form
+      .section-heading
+        +iphone()
+          padding-top 80px
