--- a/src/pages/BetterYet/sections/ClientFooter/index.styl
+++ b/src/pages/BetterYet/sections/ClientFooter/index.styl
@@ -1,5 +1,6 @@
-@import '~styles/config.styl'
-
 .betteryet-page .client-footer
   margin 120px 0
   max-width 675px
+
+  +iphone()
+    margin 28px 0 40px
