--- a/src/pages/Landing/sections/Clients/index.styl
+++ b/src/pages/Landing/sections/Clients/index.styl
@@ -1,5 +1,3 @@
-@import '~styles/config.styl'
-
 .clients
   position relative
 
@@ -19,6 +17,25 @@
     padding 60px 0
     opacity 1
 
+    +iphone()
+      height 100%
+
+    .client-footer
+      +iphone()
+        margin-top 24px
+
+      .project-details-btn
+        +iphone()
+          margin 0
+
+        .button-title
+          +iphone()
+            color $black
+
+        .button-icon
+          +iphone()
+            background-color $black
+
     &.animated
       animation ClientBlock 1.4s ease forwards
 
@@ -29,6 +46,9 @@
     .pagination
       display flex
       align-items flex-end
+
+      +iphone()
+        display none
 
     .element:last-child
       margin-right 0
